@startuml
class Game {
    -stateStack : vector<GameState*> 
    -isRunning : bool
    +run() : void
    +handleInput() : void
    +update(dt : float) : void
    +render() : void
    +pushState(state : GameStateType) : void
    +popState() : void
    +changeState(state : GameStateType) : void
}

class GameManager {
    -instance : static GameManager*
    -currentFloor : int
    -score : int
    -playerHealth : int
    -playerBombs : int
    -playerRopes : int
    -playerGold : int
    -selectedCharacter : CharacterType 
    -ghostTimer : float
    +static getInstance() : GameManager*
    +syncPlayerStats(hp : int , b : int , r : int , g : int) : void
    +nextFloor() : void
    +resetRun() : void
    +setSelectedCharacter(type : CharacterType) : void
    +tickGhostTimer(dt : float) : bool
    +saveHighScore(name : string) : void
    +loadHighScores() : vector<HighScoreEntry>
}

class HighScoreEntry <<struct>> {
    +name : string
    +score : int
    +floorsReached : int
}

class AudioManager {
    - instance : static AudioManager*
    -sfxCache : unordered_map<string, Sound>
    -bgmCache : unordered_map<string, Music>
    -currentBGM : Music*
    -sfxVolume : float
    -bgmVolume : float
    +static getInstance() : AudioManager*
    +loadSFX(name : string, filePath : string) : void
    +playSFX(string name) : void
    +loadBGM(name : string, filePath : string) : void
    +playBGM(name : string) : void
    +stopBGM() : void
    +setVolume(sfx : float, bgm : float) : void
}

abstract class GameState {
    #game : Game* 
    +setGame(g : Game*) : void
    +{abstract} enter() : void 
    +{abstract} exit() : void
    +{abstract} handleInput() : void
    +{abstract} update(dt : float) : void
    +{abstract} render() : void
}

class MenuState {
    - selectedOption : int
    - background : Texture2D
}

class PlayState {
    - player : unique_ptr<Player>
    - camera : Camera2D
    - tempGenerator : unique_ptr<LevelGenerator>
    - tempLevel : GeneratedLevel
    - physics : unique_ptr<PhysicsSystem>
    - minimap : unique_ptr<Minimap>
    - lighting : unique_ptr<LightingSystem>
    - liquids : unique_ptr<LiquidSimulator>
    - combo : unique_ptr<ComboSystem>
    - shop : unique_ptr<ShopSystem>
    - pendingItems : vector<unique_ptr<Item>>
    - pendingEntities : vector<unique_ptr<DynamicEntity>>
}

class PauseState {
    - selectedOption : int
}

class GameOverState {
    - finalScore : int
    - floorsReached : int
    - nameInput : char[4]
    - letterCount : int
    - nameEntered : bool
    - leaderboard : vector<HighScoreEntry>
}

class TransitionState {
    - player : unique_ptr<Player>
    - physics : unique_ptr<PhysicsSystem>
    - tunnelMap : unique_ptr<TileMap>
    - lighting : unique_ptr<LightingSystem>
    - camera : Camera2D
}

class CharSelectState {
    - selectedIndex : int
    - characters : vector<CharacterType>
}

class EditorFileMenuState {
    - selectedOption : int
}

class LevelEditorMenuState {
    - selectedOption : int
}

class EditorState {
    - tileMap : unique_ptr<TileMap>
    - camera : Camera2D
    - paletteItems : vector<PaletteItem>
    - undoStack : vector<TileChange>
    - redoStack : vector<TileChange>
}

class PaletteItem <<struct>> {
    +type : TileType
    +tex : Texture2D
    +src : Rectangle
    +name : string
}

class TileChange <<struct>> {
    +x : int
    +y : int
    +oldType : TileType
    +newType : TileType
}

class VictoryState {
    - currentScene : EndingScene
    - player : CutsceneActor
    - chest : CutsceneActor
    - finalScore : int
    - leaderboard : vector<HighScoreEntry>
}

Game "1" *-- "many" GameState : stateStack
GameState <|.. MenuState
GameState <|.. PlayState
GameState <|.. PauseState
GameState <|.. GameOverState
GameState <|.. TransitionState
GameState <|.. CharSelectState
GameState <|.. EditorFileMenuState
GameState <|.. EditorState
GameState <|.. VictoryState
GameState <|.. LevelEditorMenuState
Game ..> GameManager : uses
Game ..> AudioManager : uses
EditorState *-- PaletteItem : paletteItems
EditorState *-- TileChange : undoStack\nredoStack
GameState o-- Game : game
GameManager *-- CharacterType : selectedCharacter
@enduml